# Learning_Team

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: ci_cd.md  dockers.md  index.md  manager.md  microservicios_cpp.md  nodejs.md  project_structure.md  python_package.md  python_password.md  python_security.md  scrappy.md
docs/api/: api_design.md
docs/architecture/: NASDL.md  SOA.md  monoliticos.md
docs/code/: design_patterns_01.md  design_patterns_02.md
docs/docker/: intro.md  multi_stage_build_01.md  multi_stage_build_02.md  multiprocess.md  networking.md
docs/flask/: context.md  intro.md
docs/graphql/: graphl_documentation.md  graphql_01.md  graphql_federation.md  graphql_underfetching.md  rest_to_graphql.md
docs/kafka/: 01_intro.md  stream_processing_gcp.md
docs/minutes/: 2021_09_20.md
docs/python/: abtract_class.md  register.md
docs/time_series_databases/: statsd_01.md
docs/web/: README.md
documentation/: architecture.md  blockchain.md  dockers.md  flask_celery.md  nvm.md  poco.md  project_structure.md  token_based_authentication.md  utils.md
documentation/graphql/: graphql.md
documentation/python/: sync_async.md
src/airflow/: README.md  build.bat  install_windows_wsl.md
src/atlantis/: README.md
src/blockchain-cardano/: README.md
src/cpp-poco/: build_base.sh  docker-compose.yml
src/cpp-poco/src/: CMakeLists.txt  Dockerfile  main.cpp
src/cpp-poco/src/samples/01_byteorder/: byteorder.cpp
src/deploy-heroku/: README.md
src/docker/: README.md  README.sp.md
src/docker-stateful-app/: docker-compose.yml
src/fastapi/: Makefile  example_01.py
src/flask-app/: docker-compose.yml  docker_build.bat  docker_connect.bat  docker_run.bat
src/flask-app-services/: README.md  docker-compose.yml  docker_build.bat  docker_connect.bat  docker_run.bat
src/flask-celery/: README.MD
src/flask-config/: Dockerfile.py  README.MD  config.py  docker_build.bat  (+2 more)
(+183 files in other folders)
